--- a/.env
+++ b/.env
@@ -38,4 +38,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
+MAILER_DSN=smtp://770f7ab85dad95:fe14aa81f27fbf@sandbox.smtp.mailtrap.io:2525
 ###< symfony/mailer ###
